force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_NivelAMSPYAteSextoMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_NivelAMSPYAteSextoMesAF__c</fullName>
    <description>Range de atingimento de metas para a iniciativa SPY. Campo para auxiliar na funcionalidade de atribuição de badges a cada mês no ano fiscal.</description>
    <formula>IF(
OR(
ISNULL(V_PercentualAMAteSextoMesAF__c),
V_PercentualAMAteSextoMesAF__c &lt; 0.95), 0,

IF(
AND(
V_PercentualAMAteSextoMesAF__c &gt;= 0.95,
V_PercentualAMAteSextoMesAF__c &lt; 1), 1,

IF(
AND(
V_PercentualAMAteSextoMesAF__c &gt;= 1,
V_PercentualAMAteSextoMesAF__c &lt; 1.2), 2,

IF(
AND(
V_PercentualAMAteSextoMesAF__c &gt;= 1.2,
V_PercentualAMAteSextoMesAF__c &lt; 1.4), 3,

IF(
V_PercentualAMAteSextoMesAF__c &gt;= 1.4, 4, Null)

))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Range de atingimento de metas para a iniciativa SPY. Campo para auxiliar na funcionalidade de atribuição de badges a cada mês no ano fiscal.</inlineHelpText>
    <label>INATIVO - Nível AM SPY Até Mês 9</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>