force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_NivelAMSPYAteTerceiroMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_NivelAMSPYAteTerceiroMesAF__c</fullName>
    <description>Range de atingimento de metas para a iniciativa SPY no 3o. mês do ano fiscal. Campo para auxiliar na funcionalidade de atribuição de badges a cada mês no ano fiscal.</description>
    <formula>IF(
OR(
ISNULL(V_PercentualAMAteTerceiroMesAF__c),
V_PercentualAMAteTerceiroMesAF__c &lt; 0.95), 0,

IF(
AND(
V_PercentualAMAteTerceiroMesAF__c &gt;= 0.95,
V_PercentualAMAteTerceiroMesAF__c &lt; 1), 1,

IF(
AND(
V_PercentualAMAteTerceiroMesAF__c &gt;= 1,
V_PercentualAMAteTerceiroMesAF__c &lt; 1.2), 2,

IF(
AND(
V_PercentualAMAteTerceiroMesAF__c &gt;= 1.2,
V_PercentualAMAteTerceiroMesAF__c &lt; 1.4), 3,

IF(
V_PercentualAMAteTerceiroMesAF__c &gt;= 1.4, 4, Null)

))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Range de atingimento de metas para a iniciativa SPY no 3o. mês do ano fiscal. Campo para auxiliar na funcionalidade de atribuição de badges a cada mês no ano fiscal.</inlineHelpText>
    <label>INATIVO - Nível AM SPY Até Mês 6</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>