force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_NomeParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_NomeParticipante__c</fullName>
    <formula>V_Participante__r.Name</formula>
    <label>Nome do Participante</label>
    <type>Text</type>
</CustomField>