force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_Participante__c.field-meta.xml
<CustomField>
    <fullName>V_Participante__c</fullName>
    <description>Participante relacionado à meta.</description>
    <inlineHelpText>Participante relacionado à meta.</inlineHelpText>
    <label>Participante</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipName>Metas_dos_Participantes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>