force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_ParticRankingElite__c.field-meta.xml
<CustomField>
    <fullName>V_ParticRankingElite__c</fullName>
    <description>Utilizado para indicar se é participante do Ranking do Elite ou não. Não participa se o participante estiver &quot;Inativo&quot; OU tiver &quot;Teste&quot; em seu nome.</description>
    <formula>AND(

TEXT( V_Participante__r.FieloPLT__Status__c ) = &apos;Active&apos;,
NOT(CONTAINS( UPPER( V_Participante__r.Name), &apos;TESTE&apos;))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Utilizado para indicar se é participante do Ranking do Elite ou não. Não participa se o participante estiver &quot;Inativo&quot; OU tiver &quot;Teste&quot; em seu nome.</inlineHelpText>
    <label>Participante - Ranking Elite</label>
    <type>Checkbox</type>
</CustomField>