force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercAMAteUltimoMesProc__c.field-meta.xml
<CustomField>
    <fullName>V_PercAMAteUltimoMesProc__c</fullName>
    <description>Percentual de atingimento de metas até o último mês processado. Campo atualizado por workflow.</description>
    <inlineHelpText>Percentual de atingimento de metas até o último mês processado.</inlineHelpText>
    <label>% AM Até o Último Mês Processado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>