force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercAMProjAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercAMProjAF__c</fullName>
    <description>Indica o percentual de atingimento de meta projetado até o último mês atualizado.</description>
    <inlineHelpText>Indica o percentual de atingimento de meta projetado até o último mês atualizado.</inlineHelpText>
    <label>% AM Projetado - AF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>