force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercAMProjAteDecimoMes__c.field-meta.xml
<CustomField>
    <fullName>V_PercAMProjAteDecimoMes__c</fullName>
    <description>Indica o percentual de atingimento de meta projetado até o 10o. Mês do ano fiscal.</description>
    <formula>IF( 

NOT(ISNULL( V_AMProjPondAteDecimoMes__c )), V_AMProjPondAteDecimoMes__c , 

IF( 

OR( 
ISNULL(V_MetaAF__c), V_MetaAF__c = 0), 0, 

(V_TotalMetasSemestre1AF__c + V_MetaSetimoMesAF__c + V_MetaOitavoMesAF__c + V_MetaNonoMesAF__c + V_MetaDecimoMesAF__c) / V_MetaAF__c 

))</formula>
    <inlineHelpText>Indica o percentual de atingimento de meta projetado até o 10o. Mês do ano fiscal.</inlineHelpText>
    <label>% AM Projetado Até Mês 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>