force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercAMProjAteDecimoSegMes__c.field-meta.xml
<CustomField>
    <fullName>V_PercAMProjAteDecimoSegMes__c</fullName>
    <description>Indica o percentual de atingimento de meta projetado até o 12o. Mês do ano fiscal.</description>
    <formula>IF( 

NOT(ISNULL( V_AMProjPondAteDecimoSegMes__c )), V_AMProjPondAteDecimoSegMes__c , 

IF( 

OR( 
ISNULL(V_MetaAF__c), V_MetaAF__c = 0), 0, 

(V_TotalMetasSemestre1AF__c + V_MetaSetimoMesAF__c + V_MetaOitavoMesAF__c + V_MetaNonoMesAF__c + V_MetaDecimoMesAF__c + V_MetaDecimoPrimeiroMesAF__c + V_MetaDecimoSegundoMesAF__c) / V_MetaAF__c 

))</formula>
    <inlineHelpText>Indica o percentual de atingimento de meta projetado até o 12o. Mês do ano fiscal.</inlineHelpText>
    <label>% AM Projetado Até Mês 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>