force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercAMProjAteQuartoMes__c.field-meta.xml
<CustomField>
    <fullName>V_PercAMProjAteQuartoMes__c</fullName>
    <description>Indica o percentual de atingimento de meta projetado até o 4o. Mês do ano fiscal.</description>
    <formula>IF(

NOT(ISNULL(  V_AMProjPondAteQuartoMes__c )), V_AMProjPondAteQuartoMes__c,

IF( 

OR( 
ISNULL(V_MetaAF__c), V_MetaAF__c = 0), 0, 

(V_MetaPrimeiroMesAF__c +  V_MetaSegundoMesAF__c + V_MetaTerceiroMesAF__c +  V_MetaQuartoMesAF__c) / V_MetaAF__c 

))</formula>
    <inlineHelpText>Indica o percentual de atingimento de meta projetado até o 4o. Mês do ano fiscal.</inlineHelpText>
    <label>% AM Projetado Até Mês 7</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>