force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercAMProjAteSegundoMes__c.field-meta.xml
<CustomField>
    <fullName>V_PercAMProjAteSegundoMes__c</fullName>
    <description>Indica o percentual de atingimento de meta projetado até o 2o. Mês do ano fiscal.</description>
    <formula>IF( 

OR( 
ISNULL(V_MetaAF__c), V_MetaAF__c = 0), 0, 

(V_MetaPrimeiroMesAF__c + V_MetaSegundoMesAF__c) / V_MetaAF__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica o percentual de atingimento de meta projetado até o 2o. Mês do ano fiscal.</inlineHelpText>
    <label>% AM Projetado Até Mês 5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>