force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercAMProjAteSextoMes__c.field-meta.xml
<CustomField>
    <fullName>V_PercAMProjAteSextoMes__c</fullName>
    <description>Percentual de atingimento de meta projetado até 6o. mês do ano fiscal.</description>
    <formula>IF( 

NOT(ISNULL( V_AMProjPondAteSextoMes__c )), V_AMProjPondAteSextoMes__c, 

IF( 

OR( 
ISNULL(V_MetaAF__c), V_MetaAF__c = 0), 0, 

V_TotalMetasSemestre1AF__c / V_MetaAF__c 

))</formula>
    <inlineHelpText>Percentual de atingimento de meta projetado até 6o. mês do ano fiscal.</inlineHelpText>
    <label>% AM Projetado Até Mês 9</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>