force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercentualAMAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMAF__c</fullName>
    <description>Percentual de atingimento de metas no ano fiscal. Cálculo utilizado no Elite e SPY.</description>
    <formula>IF( 

NOT(ISNULL(V_PercAMAteUltimoMesProc__c)), V_PercAMAteUltimoMesProc__c, 

IF( 

OR(ISNULL(V_MetaAF__c), V_MetaAF__c = 0), 0, 

V_TotalVendasAF__c / V_MetaAF__c 

))</formula>
    <inlineHelpText>Percentual de atingimento de metas no ano fiscal. Cálculo utilizado no Elite e SPY.</inlineHelpText>
    <label>EXCLUIR - % AM - AF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>