force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercentualAMAteQuartoMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMAteQuartoMesAF__c</fullName>
    <description>Percentual de atingimento de metas do participante até o 4o. mês do ano fiscal. Cálculo utilizado no Elite e SPY.</description>
    <formula>IF(

NOT(ISNULL(V_AMAteQuartoMesAFPonderado__c )), V_AMAteQuartoMesAFPonderado__c,


IF(

V_MetaAF__c = 0, 0,

(( V_ResultadoPrimeiroMesAF__c+ 
V_ResultadoSegundoMesAF__c+ 
V_ResultadoTerceiroMesAF__c+ 
V_ResultadoQuartoMesAF__c)
 / 
V_MetaAF__c )

))</formula>
    <inlineHelpText>Percentual de atingimento de metas do participante até o 4o. mês do ano fiscal. Cálculo utilizado no Elite e SPY.</inlineHelpText>
    <label>% AM Até Mês 7</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>