force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercentualAMAteSegundoMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMAteSegundoMesAF__c</fullName>
    <description>Percentual de atingimento de metas  do participante até o 2o. mês do ano fiscal. Cálculo utilizado no Elite e SPY.</description>
    <formula>IF(

V_MetaAF__c = 0, 0,

(( V_ResultadoPrimeiroMesAF__c+ 
V_ResultadoSegundoMesAF__c ) / 

V_MetaAF__c )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentual de atingimento de metas  do participante até o 2o. mês do ano fiscal. Cálculo utilizado no Elite e SPY.</inlineHelpText>
    <label>% AM Até Mês 5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>