force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercentualAMAteTerceiroMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMAteTerceiroMesAF__c</fullName>
    <description>Percentual de atingimento de metas do participante até o 3o. mês do ano fiscal. Cálculo utilizado no Elite e SPY.</description>
    <formula>IF(

NOT(ISNULL(V_AMAteTerceiroMesAFPonderado__c )), V_AMAteTerceiroMesAFPonderado__c,

IF(

V_MetaAF__c = 0, 0,

(( V_ResultadoPrimeiroMesAF__c+ 
V_ResultadoSegundoMesAF__c+ 
V_ResultadoTerceiroMesAF__c) / 

V_MetaAF__c )

))</formula>
    <inlineHelpText>Percentual de atingimento de metas do participante até o 3o. mês do ano fiscal. Cálculo utilizado no Elite e SPY.</inlineHelpText>
    <label>% AM Até Mês 6</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>