force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercentualAMDecimoMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMDecimoMesAF__c</fullName>
    <description>Percentual de atingimento de metas do participante no 10o. mês do ano fiscal. Cálculo utilizado no Youbet.</description>
    <formula>IF(

OR(
ISNULL(V_MetaDecimoMesAF__c),
V_MetaDecimoMesAF__c = 0), 0,

V_ResultadoDecimoMesAF__c / V_MetaDecimoMesAF__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentual de atingimento de metas do participante no 10o. mês do ano fiscal. Cálculo utilizado no Youbet.</inlineHelpText>
    <label>% AM - Mês 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>