force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercentualAMDecimoPrimeiroMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMDecimoPrimeiroMesAF__c</fullName>
    <description>Percentual de atingimento de metas do participante no 11o. mês do ano fiscal. Cálculo utilizado no Youbet.</description>
    <formula>IF(

OR(
ISNULL(V_MetaDecimoPrimeiroMesAF__c),
V_MetaDecimoPrimeiroMesAF__c = 0), 0,

V_ResultadoDecimoPrimeiroMesAF__c / V_MetaDecimoPrimeiroMesAF__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentual de atingimento de metas do participante no 11o. mês do ano fiscal. Cálculo utilizado no Youbet.</inlineHelpText>
    <label>% AM - Mês 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>