force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercentualAMDecimoSegundoMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMDecimoSegundoMesAF__c</fullName>
    <description>Percentual de atingimento de metas do participante no 12o. mês do ano fiscal. Cálculo utilizado no Youbet.</description>
    <formula>IF(

OR(
ISNULL(V_MetaDecimoSegundoMesAF__c),
V_MetaDecimoSegundoMesAF__c = 0), 0,

V_ResultadoDecimoSegundoMesAF__c / V_MetaDecimoSegundoMesAF__c

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentual de atingimento de metas do participante no 12o. mês do ano fiscal. Cálculo utilizado no Youbet.</inlineHelpText>
    <label>% AM - Mês 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>