force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_PercentualAMLiderImediato2oTrim__c.field-meta.xml
<CustomField>
    <fullName>V_PercentualAMLiderImediato2oTrim__c</fullName>
    <description>Percentual de atingimento de meta (AM) do líder imediato do participante após fechamento do 2o. trimestre do ano fiscal.</description>
    <inlineHelpText>Percentual de atingimento de meta (AM) do líder imediato do participante após fechamento do 2o. trimestre do ano fiscal.</inlineHelpText>
    <label>% AM do Líder Imediato - 2o. Trim.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>